Change overflow from scroll to auto to fix issue on Windows where scroll bars would always display regardless of whether they are needed. Add some decorations around the aligned message.

--- a/styles.less
+++ b/styles.less
@@ -407,6 +407,8 @@ ul,ol{
 		background-color:inherit;
 		.borderRadius(10px);
 		.aligned{
+			border:1px dashed;
+			padding: 1px 2px;
 			background-color:lightyellow;
 		}
 	}
@@ -426,7 +428,7 @@ ul,ol{
 		float: left;
 		padding:10px;
 		background-color:inherit;
-		overflow:scroll;
+		overflow:auto;
 		.borderRadius(25px);
 		color:inherit;
 		
